--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,6 +13,7 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
-		<h1>My Astro Site</h1>
+		<h1>Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
 	</body>
 </html>
