--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+---
+const pageTitle = "My Astro Learning Blog";
+---
 
 <html lang="en">
 	<head>
@@ -12,6 +12,9 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 		<h1>Astro</h1>
 		<h1>My Astro Site</h1>
 	</body>
