navigation and global css

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,7 @@
 ---
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -15,27 +18,28 @@ const finished = false;
 const goal = 3;
 
 const skillColor = "navy";
+const fontWeight = 'bold';
+const textCase = "uppercase";
 ---
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{pageTitle}</title>
-    <style>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
         h1 {
           color: purple;
           font-size: 4rem;
         }
         .skill {
-            color: green;
-            font-weight: bold;
+          color: var(--skillColor);
+          font-weight: var(--fontWeight);
+          text-transform: var(--textCase);
         }
       </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
 
