--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,8 @@
 ---
+import Navigation from '../components/Navigation.astro';
 const pageTitle = "My Astro Learning Blog";
 ---
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
+
 
 <html lang="en">
 	<head>
@@ -14,6 +13,7 @@ const pageTitle = "My Astro Learning Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
+		<Navigation />
 		<h1>Astro</h1>
 		<h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
