--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 
 ---
+import Navigation from '../components/Navigation.astro';
+
 const pageTitle = "My Astro Learning Blog";
+import '../styles/global.css';
 ---
 
 <html lang="en">
@@ -12,9 +15,7 @@ const pageTitle = "My Astro Learning Blog";
 		<title>Astro</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Navigation />
 		<h1>Astro</h1>
 		<h1>My Astro Site</h1>
 	</body>
