--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,22 @@
-
 ---
 import Navigation from '../components/Navigation.astro';
-
-const pageTitle = "My Astro Learning Blog";
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
+
+const pageTitle = 'Home Page';
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<Navigation />
-		<h1>Astro</h1>
-		<h1>My Astro Site</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <Navigation />
+    <h1>{pageTitle}</h1>
+    <Footer />
+  </body>
 </html>
