--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
-import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -14,7 +14,7 @@ const pageTitle = "My Astro Learning Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>Astro</h1>
 		<h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
