--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+// below it returns an information about blog post as an array 
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true })); 
+// 
 const pageTitle = "My Astro Learning Blog";
 ---
 <BaseLayout pageTitle={pageTitle}>
